
Support cookies when uploading/downloading.
----------------------------------------------------------------------
Wed Mar 15 00:31:28 2006                        Michael Jennings (mej)

If somebody (like me) mistakenly specifies a subversion repository
with -D to mzget, don't crap out.  Do the right thing.
----------------------------------------------------------------------
Mon Mar 27 14:51:37 2006                        Michael Jennings (mej)

Fix cookie module check.
----------------------------------------------------------------------
Tue Apr  4 16:50:40 2006                        Michael Jennings (mej)

Flag tainted objects in &examine_object().

Added a routine to untaint variables based on a regexp.
----------------------------------------------------------------------
Mon Jun  5 21:27:29 2006                        Michael Jennings (mej)

Added new RPM query format for abiscan.

Refactored changelog message to be an SCM object property.

Corrected Subversion "move" implementation to use "svn move".
----------------------------------------------------------------------
Tue Jun  6 17:52:18 2006                        Michael Jennings (mej)

Fix untaint() function.
----------------------------------------------------------------------
Tue Sep 26 15:32:39 2006                        Michael Jennings (mej)

Turn on taint checking for specgen.
----------------------------------------------------------------------
Tue Sep 26 16:11:16 2006                        Michael Jennings (mej)

Better checking for instroot paths when installing files.

More robust execution of rpm --eval subcommand.

Check basenames, not full paths, when looking for .#* and *~.
----------------------------------------------------------------------
Tue Oct  3 18:04:58 2006                        Michael Jennings (mej)

Taint fixes brought to light by specgen going -T.
----------------------------------------------------------------------